--- a/index.html
+++ b/index.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
-<html style="margin: 0;">
+<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Gregory White</title>
-    <meta name="description" content="Qualitative and mixed-method researcher">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 
-<body class="text-center">
-    <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" data-bs-hover-animate="pulse" href="#page-top">Homepage</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div
-                class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" data-bs-hover-animate="pulse" href="#about">About</a></li>
+<body>
+    <nav class="navbar navbar-light navbar-expand-md" style="background: var(--gray-dark);">
+        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--white);">Homepage</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav">
+                    <li class="nav-item"></li>
                 </ul>
-        </div>
+            </div>
         </div>
     </nav>
-    <div class="container text-center" style="height: 100px;">
+    <div class="container" style="padding: 75px;">
         <h1 class="text-center">Dr Gregory White</h1>
-        <p class="text-center">Experienced mixed-method and qualitative researcher</p>
+        <h5 class="text-center">Experienced mixed-method and qualitative researcher</h5>
     </div>
-    <div class="container"><img class="rounded" src="assets/img/IMG_8426.jpg" width="900"></div>
-    <div class="container text-left" style="margin: 40px;">
-        <h3>About</h3>
-        <p>Website under development - come back soon!</p>
+    <div class="container">
+        <p class="text-center">This website is under construction.</p>
     </div>
-    <div class="social-icons" style="padding: 30px;"><a target="_blank" href="https://twitter.com/drgregoryw"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/in/gregory-white" target="_blank"><i class="icon ion-social-linkedin"></i></a></div>
-    <div class="footer-basic">
-        <footer>
-            <p class="copyright">Gregory White 2020</p>
-        </footer>
-    </div>
+    <div class="social-icons"><a href="https://twitter.com/drgregoryw" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="#"></a><a href="#"></a><a href="https://www.linkedin.com/in/gregory-white" target="_blank"><i class="icon ion-social-linkedin"></i></a></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
